# DTE

./: CMakeLists.txt  README.md  build.sh  sample.dts  test_cli.sh
cli/: CLIApp.cpp  CMakeLists.txt  main.cpp
include/: CLIApp.h  DeviceTree.h  DeviceTreeDiff.h  DeviceTreeParser.h  DiffViewerWidget.h  MainWindow.h  PropertyTableWidget.h
src/: CMakeLists.txt  DeviceTree.cpp  DeviceTreeDiff.cpp  DeviceTreeParser.cpp  DeviceTreeWidgetItem.cpp  DiffViewerWidget.cpp  MainWindow.cpp  PropertyTableWidget.cpp  main.cpp
